Fixed overflow bug.

--- a/assets/src/less/core.less
+++ b/assets/src/less/core.less
@@ -15,8 +15,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 400;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: auto;
 }
 
 /* Layout */
